@@ -10,6 +10,7 @@ New features:
  - Support new features in Marantz AVR protocol: multiple-zone support and additional commandsr (MODELER-516)
  - Update DateTime protocol configuration (MODELER-517)
  - Add ip and port parameters to RRD4J graph protocol (MODELER-520)
+ - Add controller configuration parameters for Samsung TV (MODELER-521)
 
 Pro 1.0.10
 ==========
